--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
-DB_USER=postgres
-DB_PASSWORD=12341234
+DB_USER=root
+DB_PASSWORD=123123
 DB_NAME=qrcode
-PORT=3000
+PORT=3002
 JWT_SECRET=qrcodeProject
