--- a/frontend/Admin/package.json
+++ b/frontend/Admin/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "@react-pdf/renderer": "^4.3.0",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "notistack": "^3.0.2",
@@ -22,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-pdf": "^10.0.1",
     "react-router-dom": "^7.8.0",
+    "react-to-print": "^3.1.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
